# whisker

./: .gitignore  .markdownlintignore  .pre-commit-config.yaml  .rustfmt.toml  .taplo.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  deny.toml  justfile  rust-toolchain.toml
.config/: nextest.toml
.config/tracey/: config.styx
.flox/: env.json
.flox/env/: manifest.toml
.github/: labelflair.toml  renovate.json5
.github/scripts/: sync-toolchain.sh
.github/workflows/: ci.yml  labelflair.yml  sync-toolchain.yml
crates/whisker/: Cargo.toml
crates/whisker/src/: commands.rs  driver.rs  main.rs  toolchain.rs
crates/whisker/src/commands/: check.rs
crates/whisker/tests/: check.rs  cli.rs  driver.rs
crates/whisker/tests/cmd/: check_help.md  help.md  version.md
crates/whisker/tests/fixtures/: wildcard_match.rs  wildcard_match_with_dead_code.rs
crates/whisker_testing/: Cargo.toml
crates/whisker_testing/src/: lib.rs
docs/: project-template.md
examples/sample_project/: Cargo.toml
examples/sample_project/src/: main.rs
lints/anyhow_missing_context/: Cargo.toml
lints/anyhow_missing_context/examples/: anyhow_test.rs  anyhow_test.stderr
lints/anyhow_missing_context/src/: lib.rs
lints/anyhow_missing_context/ui/: main.rs
lints/bool_param/: Cargo.toml
lints/bool_param/src/: lib.rs
lints/bool_param/ui/: main.rs  main.stderr
lints/derive_order/: Cargo.toml
lints/derive_order/src/: lib.rs
lints/derive_order/ui/: main.rs  main.stderr
lints/if_let_with_else/: Cargo.toml
lints/if_let_with_else/src/: lib.rs
lints/if_let_with_else/ui/: main.rs  main.stderr
lints/no_matches_macro/: Cargo.toml
lints/no_matches_macro/src/: lib.rs
lints/no_matches_macro/ui/: main.rs  main.stderr
lints/prefer_let_else/: Cargo.toml
lints/prefer_let_else/src/: lib.rs
lints/prefer_let_else/ui/: main.rs  main.stderr
lints/wildcard_match_arm/: Cargo.toml
lints/wildcard_match_arm/src/: lib.rs
lints/wildcard_match_arm/ui/: main.rs  main.stderr
specs/: lints.md  whisker.md  whisker_testing.md
