[workspace]
members = ["crates/*", "lints/*"]
exclude = ["examples/*"]

# Opt-in to the new feature resolver introduced in Rust 1.85 and Edition 2024.
# https://doc.rust-lang.org/cargo/reference/resolver.html#resolver-versions
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

license = "Apache-2.0 OR MIT"
repository = "https://github.com/aonyx-ai/whisker.git"

[workspace.dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "20ce69b9a63bcd2756cd906fe0964d1e901e042a" }
dylint_linting = "5.0.0"
whisker_testing = { path = "crates/whisker_testing", version = "=0.1.0" }
