[package]
name = "anyhow_missing_context"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clippy_utils.workspace = true
dylint_linting.workspace = true

[dev-dependencies]
anyhow = "1"
dylint_testing.workspace = true
whisker_testing.workspace = true

[package.metadata.rust-analyzer]
rustc_private = true
